--- a/source/R5T.T0032.X0001/R5T.T0032.X0001.csproj
+++ b/source/R5T.T0032.X0001/R5T.T0032.X0001.csproj
@@ -4,4 +4,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1701;1702;1591;1573</NoWarn>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0032\source\R5T.T0032\R5T.T0032.csproj" />
+  </ItemGroup>
 </Project>
